projet_gl/src/test/deca/context/valid/0_02/0_02_Type_Float.deca
// Description:
//    Programme test si l'identifier type float est bien déclaré
//
// Resultats:
//
// Historique:
//    cree le 09/01/2024

{
        float a;
}
